@@ -1,5 +1,6 @@
 package workbench.graphics.scene.ui.game;
 
+import api.system.JGemsAPI;
 import imgui.ImGui;
 import imgui.flag.ImGuiMouseCursor;
 import imgui.flag.ImGuiWindowFlags;
@@ -7,9 +8,11 @@ import imgui.type.ImBoolean;
 import javagems3d.JGems3D;
 import javagems3d.graphics.rendering.programs.fbo.FBOTexture2DProgram;
 import javagems3d.graphics.rendering.ui.dear_imgui.interfaces.DearUIInterface;
+import javagems3d.help.JGemsHelper;
 import javagems3d.system.controller.base.MouseKeyboardController;
 import javagems3d.system.core.JGemsLaunchArgsRegistry;
 import javagems3d.system.service.collections.Pair;
+import javagems3d.system.service.exceptions.JGemsIOException;
 import javagems3d.system.service.files.JGemsPath;
 import logger.Log;
 import logger.managers.LoggingManager;
@@ -22,6 +25,14 @@ import workbench.graphics.scene.ui.game.editor.ActionsInterfaceComponentG;
 import workbench.graphics.scene.ui.game.editor.ResourcesInterfaceComponentG;
 import workbench.graphics.scene.ui.game.editor.WindowInterfaceComponentG;
 import workbench.project.map.WBenchMapProjectManager;
+
+import java.io.File;
+import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+import java.nio.file.attribute.PosixFilePermission;
+import java.util.Set;
 
 public class GameEditorInterface implements DearUIInterface {
     public static boolean isCursorInsideScene;
@@ -84,7 +95,8 @@ public class GameEditorInterface implements DearUIInterface {
                 JGems3D.IsolatedProcessLauncher.EXEC(JGemsLaunchArgsRegistry.getArgumentFrom(
                         new Pair<>(JGemsLaunchArgsRegistry.JGemsLaunchArgs.DEBUG, "true"),
                         new Pair<>(JGemsLaunchArgsRegistry.JGemsLaunchArgs.NO_SOUND, "false"),
-                        new Pair<>(JGemsLaunchArgsRegistry.JGemsLaunchArgs.EXTERNAL_GAME_DEF, WBench.get().getGameProjectManager().getGameProject().getProjectAbsolutePath().fullPath())
+                        new Pair<>(JGemsLaunchArgsRegistry.JGemsLaunchArgs.EXTERNAL_GAME_DEF, WBench.get().getGameProjectManager().getGameProject().getProjectAbsolutePath().fullPath()),
+                        new Pair<>(JGemsLaunchArgsRegistry.JGemsLaunchArgs.API_APP_CLASSPATH, JGemsAPI.getExternalClassApiDef())
                 ));
             }
             ImGui.separator();
@@ -104,9 +116,27 @@ public class GameEditorInterface implements DearUIInterface {
             ImGui.endMenu();
         }
         if (ImGui.beginMenu("Build")) {
-            if (ImGui.menuItem("Compile (WIP)")) {
-
+            ImGui.beginDisabled(JGems3D.isIDEA());
+            if (ImGui.menuItem("Compile")) {
+                String pathToSafe = JGemsHelper.files().openFolderViewChooser("");
+                if (pathToSafe != null && !pathToSafe.isEmpty()) {
+                    File f = new File(pathToSafe, WBench.get().getGameProjectManager().getGameProject().getGameTitle());
+                    if (f.exists() || f.mkdir()) {
+                        this.copyRuntime(f);
+                        File gameFiles = new File(f, "game_dir");
+                        if (gameFiles.exists() || gameFiles.mkdir()) {
+                            JGemsHelper.files().copyDirectory(WBench.get().getGameProjectManager().getGameProject().getProjectAbsolutePath().toFile(), gameFiles);
+                        } else {
+                            throw new JGemsIOException("Unable to create project folder " + gameFiles.getPath());
+                        }
+                        this.createBatSh(f);
+                        LoggingManager.showWindowInfo("Success!");
+                    } else {
+                        throw new JGemsIOException("Unable to create project folder " + f.getPath());
+                    }
+                }
             }
+            ImGui.endDisabled();
             ImGui.endMenu();
         }
         ImGui.endMainMenuBar();
@@ -152,6 +182,100 @@ public class GameEditorInterface implements DearUIInterface {
         ImGui.end();
 
         //this.getContextComponent().context();
+    }
+
+    private void createBatSh(File dir) {
+        this.createWorkbenchBat(dir);
+        this.createCoreBat(dir);
+        this.createWorkbenchSh(dir);
+        this.createCoreSh(dir);
+    }
+
+    private void makeExecutable(File file) {
+        try {
+            Files.setPosixFilePermissions(file.toPath(),
+                    Set.of(
+                            PosixFilePermission.OWNER_EXECUTE,
+                            PosixFilePermission.OWNER_READ,
+                            PosixFilePermission.OWNER_WRITE,
+                            PosixFilePermission.GROUP_EXECUTE,
+                            PosixFilePermission.GROUP_READ,
+                            PosixFilePermission.OTHERS_EXECUTE,
+                            PosixFilePermission.OTHERS_READ
+                    )
+            );
+        } catch (Exception ignored) {}
+    }
+
+    private void createCoreSh(File dir) {
+        File sh = new File(dir, "jgems3d-core-run.sh");
+
+        String content =
+                "#!/bin/bash\n" +
+                        "DIR=\"$(cd \"$(dirname \"$0\")\" && pwd)\"\n" +
+                        "java -Dpolyglotimpl.DisableMultiReleaseCheck=true --enable-native-access=ALL-UNNAMED -XX:+UseG1GC -Xms512m -Xmx4G -cp \"$DIR/core/jgems3d-core.jar:$DIR/core/jgems3d-launcher.jar\" launcher.bootstrap.Bootstrap workbench=false external_def=\"$DIR/game_dir\"\n";
+
+        this.writeFile(sh, content);
+        this.makeExecutable(sh);
+    }
+
+    private void createWorkbenchSh(File dir) {
+        File sh = new File(dir, "jgems3d-workbench-run.sh");
+
+        String content =
+                "#!/bin/bash\n" +
+                        "DIR=\"$(cd \"$(dirname \"$0\")\" && pwd)\"\n" +
+                        "java -Dpolyglotimpl.DisableMultiReleaseCheck=true --enable-native-access=ALL-UNNAMED -XX:+UseG1GC -Xms512m -Xmx4G -cp \"$DIR/core/jgems3d-core.jar:$DIR/core/jgems3d-launcher.jar:$DIR/core/jgems3d-workbench.jar\" launcher.bootstrap.Bootstrap workbench=true\n";
+
+        this.writeFile(sh, content);
+        this.makeExecutable(sh);
+    }
+
+    private void createCoreBat(File dir) {
+        File bat = new File(dir, "jgems3d-core-run.bat");
+
+        String content =
+                "@echo off\n" +
+                        "java -Dpolyglotimpl.DisableMultiReleaseCheck=true --enable-native-access=ALL-UNNAMED -XX:+UseG1GC -Xms512m -Xmx4G -cp \"./core/jgems3d-core.jar;./core/jgems3d-launcher.jar\" launcher.bootstrap.Bootstrap workbench=false external_def=\"./game_dir\"\n" +
+                        "pause\n";
+
+        this.writeFile(bat, content);
+    }
+
+    private void createWorkbenchBat(File dir) {
+        File bat = new File(dir, "jgems3d-workbench-run.bat");
+
+        String content =
+                "@echo off\n" +
+                        "java -Dpolyglotimpl.DisableMultiReleaseCheck=true --enable-native-access=ALL-UNNAMED -XX:+UseG1GC -Xms512m -Xmx4G -cp \"./core/jgems3d-core.jar;./core/jgems3d-launcher.jar;./core/jgems3d-workbench.jar\" launcher.bootstrap.Bootstrap workbench=true\n" +
+                        "pause\n";
+
+        this.writeFile(bat, content);
+    }
+
+    private void writeFile(File file, String content) {
+        try {
+            Files.writeString(file.toPath(), content, StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to write " + file.getPath(), e);
+        }
+    }
+
+    private File getRunDir() {
+        try {
+            return new File(WBench.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getParentFile();
+        } catch (Exception e) {
+            throw new JGemsIOException(e);
+        }
+    }
+
+    public void copyRuntime(File targetDir) {
+        File runDir = this.getRunDir();
+        new File(targetDir, "core").mkdir();
+        JGemsHelper.files().copyFile(new File(runDir, "jgems3d-core.jar"), new File(targetDir, "./core/jgems3d-core.jar"));
+        JGemsHelper.files().copyFile(new File(runDir, "jgems3d-launcher.jar"), new File(targetDir, "./core/jgems3d-launcher.jar"));
+        JGemsHelper.files().copyFile(new File(runDir, "jgems3d-workbench.jar"), new File(targetDir, "./core/jgems3d-workbench.jar"));
+        JGemsHelper.files().copyDirectory(new File(runDir, "api"), new File(targetDir, "./core/api"));
     }
 
     public WindowInterfaceComponentG getWindowInterfaceComponentG() {
